--- a/client/app/globals.scss
+++ b/client/app/globals.scss
@@ -111,3 +111,105 @@ a {
   padding: 0;
   margin: 0;
 }
+
+.layout-wrapper {
+  display: flex;
+}
+
+.side-nav {
+  /* position: fixed; */
+  /* top: 0; */
+  /* left: 0; */
+  width: 250px;
+  height: 100vh;
+  background: #FFFFFF;
+  color: #303030;
+  transition: 0.5s;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  border-right: 1px solid #e6e6e6;
+
+  &__header {
+    padding: 1.5rem;
+    // text-align: center;
+    // background: #222;
+    // display: flex;
+    // justify-content: center;
+    width: 100%;
+  }
+
+  &__menu {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    // padding: 1rem;
+    // text-align: center;
+    gap: 1rem;
+    font-size: 1.1rem;
+
+    &-section {
+      &:nth-child(1) {
+        border-bottom: 1px solid #e6e6e6;
+      }
+    }
+
+    &-list {
+
+      list-style: none;
+      // text-align: center;
+
+
+    }
+
+    &-item {
+      padding: 0.8rem 1.5rem;
+      cursor: pointer;
+      transition: 0.3s;
+
+      a {
+        color: #303030;
+        text-decoration: none;
+        display: flex;
+        align-items: center;
+        gap: 0.5rem;
+
+        &:hover {
+          color: red;
+        }
+      }
+
+      &:hover {
+        color: red;
+      }
+    }
+  }
+
+  &__footer {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1.2rem 1.5rem;
+    border-top: 1px solid #e6e6e6;
+    cursor: pointer;
+
+    &-icon {
+      margin-right: 0.5rem;
+      width: 20px;
+      height: 20px;
+      background-color: red;
+      border-radius: 50%;
+    }
+
+    &-section {
+      display: flex;
+      // gap: 1rem;
+      // justify-content: space-between;
+      align-items: center;
+    }
+  }
+}
+
+.dashboard {
+  padding: 2rem;
+}
