--- a/client/app/globals.scss
+++ b/client/app/globals.scss
@@ -1,111 +1,3 @@
-/* :root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
-    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
-    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-} */
-
 * {
   box-sizing: border-box;
   padding: 0;
@@ -114,12 +6,10 @@ a {
 
 .layout-wrapper {
   display: flex;
+  overflow: hidden;
 }
 
 .side-nav {
-  /* position: fixed; */
-  /* top: 0; */
-  /* left: 0; */
   width: 250px;
   height: 100vh;
   background: #FFFFFF;
@@ -132,10 +22,6 @@ a {
 
   &__header {
     padding: 1.5rem;
-    // text-align: center;
-    // background: #222;
-    // display: flex;
-    // justify-content: center;
     width: 100%;
   }
 
@@ -143,8 +29,6 @@ a {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    // padding: 1rem;
-    // text-align: center;
     gap: 1rem;
     font-size: 1.1rem;
 
@@ -155,11 +39,7 @@ a {
     }
 
     &-list {
-
       list-style: none;
-      // text-align: center;
-
-
     }
 
     &-item {
@@ -203,13 +83,218 @@ a {
 
     &-section {
       display: flex;
-      // gap: 1rem;
-      // justify-content: space-between;
       align-items: center;
     }
   }
 }
 
+main {
+  width: 100%;
+}
+
 .dashboard {
-  padding: 2rem;
+  padding: 4rem 3rem;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: space-between; */
+  gap: 5rem;
+  // width: 100%;
+
+  &__container {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+  }
+
+  &__greeting {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+
+    p {
+      color: #333333;
+      font-size: 14px;
+    }
+  }
+
+  &__info {
+    display: flex;
+    justify-content: space-between;
+    gap: 2rem;
+
+    &-item {
+      width: 100%;
+      color: #666;
+      text-transform: uppercase;
+      border: 1px solid #e0e0e0;
+      border-radius: 12px;
+      padding: 12px 16px;
+      font-size: 11px;
+      font-weight: 500;
+      line-height: 1.45455;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+
+      h3 {
+        color: #303030;
+        margin-bottom: 8px;
+        font-size: 18px;
+        font-weight: 700;
+      }
+    }
+  }
+
+  &__transactions {
+
+    display: flex;
+    // flex-direction: column;
+    justify-content: space-between;
+    gap: 2rem;
+
+
+    &-header {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      // justify-content: space-between;
+      // align-items: center;
+      border: 1px solid #e0e0e0;
+      border-radius: 12px;
+      // padding: 12px 16px;
+      gap: 1rem;
+      max-height: 380px;
+      overflow-y: scroll;
+
+
+      h3 {
+        color: #303030;
+        font-size: 18px;
+        font-weight: 700;
+        text-transform: capitalize;
+      }
+
+      button {
+        padding: 10px 16px;
+        color: #670b78;
+        // color: #FFFFFF;
+        background: none;
+        border: none;
+        // border-radius: 5px;
+        font-weight: 600;
+        text-transform: capitalize;
+        cursor: pointer;
+        transition: 0.3s;
+        display: flex;
+        align-items: center;
+        gap: 0.5rem;
+
+        &:hover {
+          background-color: #310639;
+        }
+      }
+    }
+
+    &-title {
+      display: flex;
+      justify-content: space-between;
+      text-transform: capitalize;
+      padding: 12px 16px 0;
+    }
+
+    &-list {
+      display: flex;
+      justify-content: space-between;
+      // flex-direction: column;
+      gap: 1rem;
+      border-bottom: 1px solid #e0e0e0;
+      padding: 12px 16px;
+
+      &:last-child {
+        border-bottom: none;
+      }
+    }
+
+    &-item {
+      display: flex;
+    }
+
+    &-summary {
+      text-align: end;
+    }
+  }
+
+  &__balances {
+    width: 400px;
+    border: 1px solid #e0e0e0;
+    border-radius: 12px;
+    // padding: 12px 16px;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+
+    h3 {
+      padding: 12px 16px;
+    }
+
+    &-list {
+      display: flex;
+      flex-direction: column;
+      gap: 32px;
+    }
+
+    &-item {
+      text-transform: capitalize;
+      border-bottom: 1px solid #e0e0e0;
+      padding: 12px 16px;
+      display: flex;
+      flex-direction: column;
+      // justify-content: space-between;
+      gap: 0.2rem;
+
+      &:last-child {
+        border-bottom: none;
+      }
+
+      &-type {
+        font-size: 14px;
+        font-weight: 400;
+        color: #56616b;
+      }
+
+      &-balance {
+        font-size: 28px;
+        font-weight: 700;
+      }
+    }
+  }
+}
+
+.submit-button {
+  padding: 10px 16px;
+  background-color: #670b78;
+  color: #FFFFFF;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.3s;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+
+  &:hover {
+    background-color: #310639;
+  }
+
+  &:disabled {
+    background-color: #e0e0e0;
+    color: #666;
+    cursor: not-allowed;
+  }
+}
+
+.spinner {
+  width: 25px;
+  height: 25px;
 }
