--- a/client/app/globals.scss
+++ b/client/app/globals.scss
@@ -124,7 +124,7 @@ main {
     gap: 2rem;
 
     &-item {
-      width: 100%;
+      width: 250px;
       color: #666;
       text-transform: uppercase;
       border: 1px solid #e0e0e0;
@@ -136,13 +136,21 @@ main {
       display: flex;
       flex-direction: column;
       justify-content: space-between;
+      gap: 0.5rem;
 
-      h3 {
-        color: #303030;
-        margin-bottom: 8px;
-        font-size: 18px;
-        font-weight: 700;
-      }
+      // h3 {
+      //   color: #303030;
+      //   margin-bottom: 8px;
+      //   font-size: 18px;
+      //   font-weight: 700;
+      // }
+    }
+
+    &-value {
+      color: #303030;
+      // margin-bottom: 8px;
+      font-size: 18px;
+      font-weight: 700;
     }
   }
 
@@ -297,4 +305,103 @@ main {
 .spinner {
   width: 25px;
   height: 25px;
+}
+
+.flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 2rem;
+
+
+}
+
+.payment-actions {
+  display: flex;
+  justify-content: center;
+  // flex-direction: column;
+  gap: 1rem;
+  width: 100%;
+
+  button {
+    width: 100%;
+    background-color: #670b78;
+    color: #ffffff;
+    border: none;
+    // border: 1px solid #670b78;
+    border-radius: 12px;
+    padding: 12px 16px;
+    cursor: pointer;
+  }
+}
+
+.modal-container {
+  position: fixed;
+  top: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.4);
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: flex-end;
+
+}
+
+.payment__modal {
+  position: fixed;
+  top: 18px;
+  right: 20px;
+  background-color: #FFFFFF;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 1rem;
+  border-radius: 20px;
+  box-shadow: rgba(219, 222, 229, 0.08) 0px 16px 32px 12px, rgba(129, 139, 165, 0.08) 0px 12px 24px 6px;
+  height: 95vh;
+  width: 450px;
+  padding: 1.2rem;
+
+  transition: opacity 0.3s ease, transform 0.9s ease;
+
+  &-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
+  }
+
+  &-input {
+    padding: 12px 16px;
+    border: 1px solid #e0e0e0;
+    border-radius: 12px;
+  }
+
+  &-button {
+    padding: 12px 16px;
+    background-color: #670b78;
+    color: #ffffff;
+    border: none;
+    border-radius: 12px;
+    cursor: pointer;
+  }
+
+  &-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 4rem;
+  }
+
+  &-form {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+
+    &-field {
+      display: flex;
+      flex-direction: column;
+      gap: 0.5rem;
+    }
+  }
 }
