--- a/client/app/globals.scss
+++ b/client/app/globals.scss
@@ -324,14 +324,23 @@ main {
   width: 100%;
 
   button {
+    text-align: center;
     width: 100%;
     background-color: #670b78;
     color: #ffffff;
     border: none;
-    // border: 1px solid #670b78;
     border-radius: 12px;
     padding: 12px 16px;
     cursor: pointer;
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+
+    &:disabled {
+      background-color: #e0e0e0;
+      color: #666;
+      cursor: not-allowed;
+    }
   }
 }
 
