--- a/client/app/globals.scss
+++ b/client/app/globals.scss
@@ -414,3 +414,19 @@ main {
     }
   }
 }
+
+
+.auth-sign {
+  padding: 10px 18px;
+  background: none;
+  border-radius: 12px;
+  border: 2px solid #670b78;
+  color: #670b78;
+  cursor: pointer;
+
+  &:hover {
+    background-color: #670b78;
+    color: #ffffff;
+    transition: 0.3s;
+  }
+}
