--- a/client/app/globals.scss
+++ b/client/app/globals.scss
@@ -97,9 +97,7 @@ main {
   height: 100vh;
   display: flex;
   flex-direction: column;
-  /* justify-content: space-between; */
   gap: 5rem;
-  // width: 100%;
 
   &__container {
     display: flex;
@@ -137,18 +135,10 @@ main {
       flex-direction: column;
       justify-content: space-between;
       gap: 0.5rem;
-
-      // h3 {
-      //   color: #303030;
-      //   margin-bottom: 8px;
-      //   font-size: 18px;
-      //   font-weight: 700;
-      // }
     }
 
     &-value {
       color: #303030;
-      // margin-bottom: 8px;
       font-size: 18px;
       font-weight: 700;
     }
@@ -157,7 +147,6 @@ main {
   &__transactions {
 
     display: flex;
-    // flex-direction: column;
     justify-content: space-between;
     gap: 2rem;
 
@@ -166,14 +155,19 @@ main {
       width: 100%;
       display: flex;
       flex-direction: column;
-      // justify-content: space-between;
-      // align-items: center;
       border: 1px solid #e0e0e0;
       border-radius: 12px;
-      // padding: 12px 16px;
       gap: 1rem;
       max-height: 380px;
       overflow-y: scroll;
+      -ms-overflow-style: none;
+      scrollbar-width: none;
+
+      &::-webkit-scrollbar {
+        display: none;
+      }
+
+
 
 
       h3 {
@@ -186,10 +180,8 @@ main {
       button {
         padding: 10px 16px;
         color: #670b78;
-        // color: #FFFFFF;
         background: none;
         border: none;
-        // border-radius: 5px;
         font-weight: 600;
         text-transform: capitalize;
         cursor: pointer;
@@ -214,7 +206,6 @@ main {
     &-list {
       display: flex;
       justify-content: space-between;
-      // flex-direction: column;
       gap: 1rem;
       border-bottom: 1px solid #e0e0e0;
       padding: 12px 16px;
@@ -237,7 +228,6 @@ main {
     width: 400px;
     border: 1px solid #e0e0e0;
     border-radius: 12px;
-    // padding: 12px 16px;
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
@@ -258,7 +248,6 @@ main {
       padding: 12px 16px;
       display: flex;
       flex-direction: column;
-      // justify-content: space-between;
       gap: 0.2rem;
 
       &:last-child {
@@ -319,7 +308,6 @@ main {
 .payment-actions {
   display: flex;
   justify-content: center;
-  // flex-direction: column;
   gap: 1rem;
   width: 100%;
 
