--- a/client/app/globals.scss
+++ b/client/app/globals.scss
@@ -155,6 +155,7 @@ main {
       width: 100%;
       display: flex;
       flex-direction: column;
+      // align-items: center;
       border: 1px solid #e0e0e0;
       border-radius: 12px;
       gap: 1rem;
@@ -178,7 +179,6 @@ main {
       }
 
       button {
-        padding: 10px 16px;
         color: #670b78;
         background: none;
         border: none;
@@ -203,9 +203,21 @@ main {
       padding: 12px 16px 0;
     }
 
+    .no-transactions {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      height: 100%;
+      align-items: center;
+      font-size: 18px;
+      font-weight: 400;
+    }
+
     &-list {
       display: flex;
       justify-content: space-between;
+      align-items: center;
+      height: 100%;
       gap: 1rem;
       border-bottom: 1px solid #e0e0e0;
       padding: 12px 16px;
