--- a/client/app/globals.scss
+++ b/client/app/globals.scss
@@ -25,18 +25,18 @@
     width: 100%;
   }
 
+  &__inner {
+    display: flex;
+    flex-direction: column;
+    gap: 4rem;
+  }
+
   &__menu {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     gap: 1rem;
     font-size: 1.1rem;
-
-    &-section {
-      &:nth-child(1) {
-        border-bottom: 1px solid #e6e6e6;
-      }
-    }
 
     &-list {
       list-style: none;
