--- a/client/app/globals.scss
+++ b/client/app/globals.scss
@@ -77,7 +77,7 @@
       margin-right: 0.5rem;
       width: 20px;
       height: 20px;
-      background-color: red;
+      background-color: #670b78;
       border-radius: 50%;
     }
 
