chore: Remove commented out code for hover background color in main component

--- a/client/app/globals.scss
+++ b/client/app/globals.scss
@@ -199,9 +199,9 @@ main {
         align-items: center;
         gap: 0.5rem;
 
-        &:hover {
-          background-color: #310639;
-        }
+        // &:hover {
+        //   background-color: #310639;
+        // }
       }
     }
 
